--- a/css/master.css
+++ b/css/master.css
@@ -89,7 +89,7 @@ h2:first-child{
 	float:left;
 	margin-right:0px;
 	display:inline;
-	margin-bottom: 420px;
+	margin-bottom: 220px;
 	margin-top: 100px;
 	font-size: 60px;
 	letter-spacing: -1px;
@@ -149,28 +149,38 @@ h2:first-child{
 
 
 ul{
-	margin-left: 0px;
+	margin: 10px auto;
 	padding-left: 3px;
 	width: 955px;
 	float:left;
-	margin-right:0px;
 	display:inline;
-	margin-bottom: 10px;
+	padding-left: 10px;
 }
 
 li{
 	list-style-type: none;
 	display:inline;
-	border:1px solid black;
-	padding: 10px;
+	border:1px solid #333;
+	padding: 15px 20px;
+	font-family: "Nova Square", cursive;
+	font-size: 18px;
 	margin-left: 0px;
 	margin-right: 20px;
 	float: left;
-	background: yellow;
+	color: white;
+	background: #993333;
 	border-radius: 10px;
-	box-shadow: 2px 1px 10px black;
+	box-shadow: 1px 1px 1px #000;
+	cursor: pointer;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+}
+
+li.selected{
+	background: #999;
 }
 
 li:hover{
-	background: red;
+	background: #CC3333;
+	box-shadow: 1px 1px 7px #333;
 }
