--- a/css/master.css
+++ b/css/master.css
@@ -257,6 +257,10 @@ img.heart {
   -moz-animation-duration: 1.5s;
   -moz-animation-timing-function: cubic-bezier(.17,.67,.61,.46);
   -moz-animation-iteration-count: infinite; 
+  -webkit-animation-name: pulse; 
+  -webkit-animation-duration: 1.5s;
+  -webkit-animation-timing-function: cubic-bezier(.17,.67,.61,.46);
+  -webkit-animation-iteration-count: infinite;
 }
 
 a.footnote{
