--- a/css/master.css
+++ b/css/master.css
@@ -72,6 +72,14 @@ h2{
 	font-weight: bold;
 }
 
+h3{
+	display:block;
+	margin-bottom: 30px;
+	margin-top: 40px;
+	font-size: 18px;
+	font-weight: bold;
+}
+
 a{
 	text-decoration: none;
 	color: black;
