--- a/css/master.css
+++ b/css/master.css
@@ -62,6 +62,7 @@ h1.page-header{
 	font-size: 40px;
 	margin-bottom: 70px;
 	margin-top: 40px;
+	line-height: 1.3em;
 }
 
 h2{
@@ -69,6 +70,15 @@ h2{
 	margin-bottom: 30px;
 	margin-top: 40px;
 	font-size: 22px;
+	font-weight: bold;
+}
+
+
+h3{
+	display:block;
+	margin-bottom: 30px;
+	margin-top: 40px;
+	font-size: 18px;
 	font-weight: bold;
 }
 
@@ -269,4 +279,9 @@ a.footnote{
 	vertical-align: super;
 	font-size: 0.8em;
 	margin-left:2px;
+}
+
+a.link{
+	color:#993333;
+	cursor:pointer;
 }
